# xcbuild

./: .gitattributes  .gitignore  .gitmodules  .travis.linux.trusty.sh  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSES.txt  Makefile  PATENTS  README.md  appveyor.yml
Libraries/: CMakeLists.txt
Libraries/acdriver/: CMakeLists.txt
Libraries/acdriver/Sources/: CompileAction.cpp  CompileActionImageSet.cpp  CompileOutput.cpp  ContentsAction.cpp  Driver.cpp  NonStandard.cpp  Options.cpp  Output.cpp  Result.cpp  Version.cpp  VersionAction.cpp
Libraries/acdriver/Tests/: test_AppIconSet.cpp  test_CompileOutput.cpp  test_LaunchImage.cpp  test_Options.cpp  test_Output.cpp  test_Result.cpp
Libraries/acdriver/Tools/: actool.cpp
Libraries/builtin/: CMakeLists.txt
Libraries/builtin/Sources/: Driver.cpp  Registry.cpp
Libraries/builtin/Tests/: test_copy.cpp  test_copyPlist.cpp  test_copyStrings.cpp
Libraries/builtin/Tools/: CMakeLists.txt  copy.cpp  copyPlist.cpp  copyStrings.cpp  (+6 more)
Libraries/config/: CMakeLists.txt
Libraries/dependency/: CMakeLists.txt
Libraries/ext/: CMakeLists.txt
Libraries/graphics/: CMakeLists.txt
Libraries/libbom/: CMakeLists.txt
Libraries/libcar/: CMakeLists.txt
Libraries/libutil/: CMakeLists.txt
Libraries/ninja/: CMakeLists.txt
Libraries/pbxbuild/: CMakeLists.txt
Libraries/pbxproj/: CMakeLists.txt
Libraries/pbxsetting/: CMakeLists.txt
Libraries/pbxspec/: CMakeLists.txt
Libraries/plist/: CMakeLists.txt
Libraries/process/: CMakeLists.txt
Libraries/xcassets/: CMakeLists.txt
Libraries/xcdriver/: CMakeLists.txt
Libraries/xcexecution/: CMakeLists.txt
Libraries/xcformatter/: CMakeLists.txt
Libraries/xcscheme/: CMakeLists.txt
Libraries/xcsdk/: CMakeLists.txt
Libraries/xcworkspace/: CMakeLists.txt
Specifications/: CMakeLists.txt
Specifications/BuildPhase/: CMakeLists.txt  com.apple.buildphase.applescript.xcspec  com.apple.buildphase.copy-files.xcspec  com.apple.buildphase.frameworks.xcspec  com.apple.buildphase.headers.xcspec  com.apple.buildphase.java-archive.xcspec  com.apple.buildphase.resources.xcspec  com.apple.buildphase.rez.xcspec  com.apple.buildphase.shell-script.xcspec  com.apple.buildphase.shellscript.xcspec  com.apple.buildphase.sources.xcspec
Specifications/BuildRules/: BuiltInBuildRules.plist  CMakeLists.txt
Specifications/BuildSystem/: CMakeLists.txt  com.apple.build-system.core.xcspec  com.apple.build-system.external.xcspec  com.apple.build-system.jam.xcspec  com.apple.build-system.native.xcspec  com.apple.buildsettings.standard.xcspec
Specifications/Compiler/: CMakeLists.txt  com.apple.build-tasks.copy-plist-file.xcspec  com.apple.build-tasks.copy-png-file.xcspec  com.apple.build-tasks.copy-strings-file.xcspec  com.apple.build-tasks.copy-tiff-file.xcspec  com.apple.build-tasks.ls-register-url.xcspec  com.apple.build-tools.nmedit.xcspec  com.apple.compilers.assetcatalog.xcspec  com.apple.compilers.gcc.xcspec  com.apple.compilers.lex.xcspec  com.apple.compilers.llvm.clang.1_0.analyzer.xcspec  com.apple.compilers.llvm.clang.1_0.astbuilder.xcspec  com.apple.compilers.llvm.clang.1_0.compiler.xcspec  com.apple.compilers.llvm.clang.1_0.migrator.xcspec  com.apple.compilers.llvm.clang.1_0.migrator.xctest.xcspec  com.apple.compilers.llvm.clang.1_0.xcspec  com.apple.compilers.model.coredata.xcspec  com.apple.compilers.model.coredatamapping.xcspec  com.apple.compilers.resource-copier.xcspec  com.apple.compilers.yacc.xcspec  com.apple.xcode.tools.ibtool.compiler.xcspec  com.apple.xcode.tools.ibtool.storyboard.compiler.xcspec  com.apple.xcode.tools.ibtool.storyboard.linker.xcspec  com.apple.xcode.tools.swift.compiler.xcspec
Specifications/FileType/: CMakeLists.txt  archive.ar.xcspec  archive.asdictionary.xcspec  archive.binhex.xcspec  archive.ear.xcspec  archive.gzip.xcspec  archive.jar.xcspec  archive.macbinary.xcspec  archive.metal-library.xcspec  archive.metal.xcspec  archive.ppob.xcspec  archive.rsrc.xcspec  archive.stuffit.xcspec  archive.tar.xcspec  archive.war.xcspec  archive.xcspec  archive.zip.xcspec  audio.aiff.xcspec  audio.au.xcspec  audio.midi.xcspec  audio.mp3.xcspec  audio.wav.xcspec  audio.xcspec  compiled.air.xcspec  compiled.cfm.xcspec  compiled.javaclass.xcspec  compiled.mach-o.bundle.xcspec  compiled.mach-o.corefile.xcspec  compiled.mach-o.dylib.xcspec  compiled.mach-o.dylinker.xcspec  compiled.mach-o.executable.xcspec  compiled.mach-o.fvmlib.xcspec  compiled.mach-o.objfile.xcspec  compiled.mach-o.preload.xcspec  compiled.mach-o.xcspec  compiled.rcx.xcspec  compiled.xcspec  file.bplist.xcspec  file.playground.xcspec  file.scp.xcspec  (+136 more)
Specifications/Linker/: CMakeLists.txt  com.apple.pbx.linkers.ld.xcspec  com.apple.pbx.linkers.libtool.xcspec  com.apple.xcode.linkers.lipo.xcspec
Specifications/Tool/: CMakeLists.txt  com.apple.build-tools.nmedit.xcspec  com.apple.build-tools.strip.xcspec  com.apple.build-tools.swift-stdlib-tool.xcspec  com.apple.commands.built-in.compilation-database-generator.xcspec  com.apple.commands.built-in.headermap-generator.xcspec  com.apple.commands.built-in.validate.xcspec  com.apple.commands.shell-script.xcspec  com.apple.compilers.cpp.xcspec  com.apple.compilers.lex.xcspec  com.apple.compilers.pbxcp.xcspec  com.apple.compilers.resource-copier.xcspec  com.apple.compilers.yacc.xcspec  com.apple.tools.ditto.xcspec  com.apple.tools.dsymutil.xcspec  com.apple.tools.info-plist-utility.xcspec  com.apple.tools.mkdir.xcspec  com.apple.tools.plutil.xcspec  com.apple.tools.symlink.xcspec  com.apple.tools.touch.xcspec
Tools/: CMakeLists.txt  build.cpp  hmap.cpp  ninja-dependency-info.cpp  pbxtool.cpp  plist.cpp  plutil.cpp  sdktool.cpp  settings.cpp  xcbuild.cpp  xcconfig.cpp  xcrun.cpp  xcspec.cpp  xctool.cpp
Tools/builtin/: CMakeLists.txt  copy.cpp  copyPlist.cpp  copyStrings.cpp  copyTiff.cpp  embeddedBinaryValidationUtility.cpp  infoPlistUtility.cpp  lsRegisterURL.cpp  productPackagingUtility.cpp  validationUtility.cpp
Tools/dump/: CMakeLists.txt  xcconfig.cpp  xcodeproj.cpp  xcspec.cpp  xcworkspace.cpp
(+1587 files in other folders)
